--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,4 +32,4 @@ jobs:
       run: gcloud container clusters get-credentials cluster-1 --region us-central1 --project kubernetes-452623
 
     - name: Install app
-      run: helm upgrade --install flask ./flask
+      run: helm upgrade --install flask ./flask --set tag=3.0.0
