--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -42,4 +42,4 @@ jobs:
       run: gcloud container clusters get-credentials cluster-1 --region us-central1 --project kubernetes-452623
 
     - name: Install app
-      run: helm upgrade --install flask ./flask --set tag=3.0.0
+      run: helm upgrade --install flask ./flask --set tag={{ inputs.docker_tag }}  --set image=${{ inputs.image }}
